prevented horizontal scroll

--- a/docs/style.css
+++ b/docs/style.css
@@ -15,6 +15,11 @@ html {
 	scroll-behavior: smooth;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
 	display: none;
